Rename csc -> brt CSC -> BRT casinocoin -> brt

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       
         <script>
             var NGXSTORE_CONFIG = {
-              prefix: 'csc_',      // default: 'ngx_'
+              prefix: 'brt_',      // default: 'ngx_'
               clearType: 'prefix', // default: 'prefix'
               mutateObjects: true, // default: true
               debugMode: false,    // you can enable debug logs if you ever meet any bug to localize its source
