--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>brt Wallet</title>
+        <title>BRT Wallet</title>
         <base href="">
-      
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
-      
+
         <script>
             var NGXSTORE_CONFIG = {
               prefix: 'brt_',      // default: 'ngx_'
